@@ -253,8 +253,6 @@ class HttpRequest:
         scheme, netloc, path, query, fragment = urllib.parse.urlsplit(self.url)
         if not path:
             path = '/'
-        else:
-            path = urllib.parse.unquote(path)
 
         if isinstance(params, dict):
             params = list(params.items())
@@ -273,7 +271,7 @@ class HttpRequest:
                 query = params
 
         self.path = urllib.parse.urlunsplit(
-            ('', '', urllib.parse.quote(path), query, fragment))
+            ('', '', urllib.parse.quote(path, safe='/%'), query, fragment))
 
     def update_headers(self, headers):
         """Update request headers."""
